--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
+/.phpunit.cache
 /node_modules
-/bootstrap/cache/*
-.env
-/storage/
-.env.backup
-.phpunit.result.cache
-docker-compose.override.yml
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
+/public/build
+/public/hot
+/public/storage
+/storage
+/vendor
+/.fleet
 /.idea
 /.vscode
-vendor
-/vendor/*
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
